# browbeat-ansible

./: .coveragerc  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  browbeat-complete.yaml  browbeat-config.yaml  requirements.txt  setup.cfg  tox.ini
ansible/: ansible.cfg
ansible/install/: install-browbeat.yml  overcloud.yml  workbench.yml
ansible/install/group_vars/: all.yml
ansible/install/roles/browbeat/tasks/: main.yml
ansible/install/roles/overcloud/defaults/: main.yml
ansible/install/roles/overcloud/tasks/: flavors.yml  images.yml  keypair.yml  main.yml  network.yml  security-group.yml
browbeat/: __init__.py
browbeat/ansible/playbooks/: rally-workload.yml
browbeat/api/: config.py  exceptions.py  logger.py  path.py  runner.py  tools.py
browbeat/cli/: main.py
browbeat/schema/: browbeat.yml
browbeat/tests/: test_browbeat.py
browbeat/workloads/: base.py  rally.py  shaker.py
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
releasenotes/source/: conf.py  index.rst
