[metadata]
name = browbeat
summary = browbeat
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    browbeat

[entry_points]
console-scripts = 
    browbeat = browbeat.cli.main:main

[compile_catalog]
directory = browbeat/locale
domain = browbeat

[update_catalog]
domain = browbeat
output_dir = browbeat/locale
input_file = browbeat/locale/browbeat.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = browbeat/locale/browbeat.pot
